--- a/package.json
+++ b/package.json
@@ -4,33 +4,38 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "remix build",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -o ./app/styles/tailwind.css",
     "postinstall": "remix setup node",
-    "dev": "concurrently \"npm run dev:netlify\" \"npm run dev:remix\"",
+    "dev": "concurrently \"npm run dev:css\" \"npm run dev:netlify\" \"npm run dev:remix\"",
+    "dev:css": "tailwindcss -o ./app/styles/tailwind.css --watch",
     "dev:remix": "remix watch",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
     "deploy": "npm run build && netlify deploy"
   },
   "dependencies": {
+    "@remix-run/netlify": "^1.1.1",
+    "@remix-run/react": "^1.1.1",
     "@netlify/functions": "^0.7.2",
-    "@remix-run/netlify": "^1.0.6",
-    "@remix-run/react": "^1.0.6",
     "classnames": "^2.3.1",
     "color-hash": "^2.0.1",
     "dayjs": "^1.10.7",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "remix": "^1.0.6",
+    "remix": "^1.1.1",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.0.6",
+    "@remix-run/dev": "^1.1.1",
     "@types/color-hash": "^1.0.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "concurrently": "^6.4.0",
+    "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
+    "tailwindcss": "^3.0.7",
     "typescript": "^4.1.2"
   },
   "engines": {
