--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "deploy": "npm run build && netlify deploy"
   },
   "dependencies": {
+    "@netlify/functions": "^0.7.2",
     "@remix-run/netlify": "^1.1.1",
     "@remix-run/react": "^1.1.1",
-    "@netlify/functions": "^0.7.2",
     "classnames": "^2.3.1",
     "color-hash": "^2.0.1",
     "dayjs": "^1.10.7",
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive": "^9.0.0-beta.5",
     "remix": "^1.1.1",
     "zustand": "^3.6.7"
   },
