--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:css": "tailwindcss -o ./app/styles/tailwind.css --watch",
     "dev:remix": "remix watch",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
-    "deploy": "npm run build && netlify deploy"
+    "deploy": "npm run build && netlify deploy",
+    "deploy:prod": "npm run build && netlify deploy --prod"
   },
   "dependencies": {
     "@netlify/functions": "^0.7.2",
@@ -27,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.5",
     "remix": "^1.1.1",
+    "socket.io-client": "^4.4.1",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
