--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "remix-app-template",
+  "name": "jvnm.dev-web",
   "description": "",
   "license": "",
   "scripts": {
@@ -10,14 +10,10 @@
     "dev": "concurrently \"npm run dev:css\" \"npm run dev:netlify\" \"npm run dev:remix\"",
     "dev:css": "tailwindcss -o ./app/styles/tailwind.css --watch",
     "dev:remix": "remix watch",
-    "dev:netlify": "cross-env NODE_ENV=development netlify dev",
-    "deploy": "npm run build && netlify deploy",
-    "deploy:prod": "npm run build && netlify deploy --prod"
+    "start": "remix-serve build"
   },
   "dependencies": {
-    "@netlify/functions": "^0.7.2",
-    "@remix-run/netlify": "^1.1.1",
-    "@remix-run/react": "^1.1.1",
+    "@remix-run/react": "^1.5.1",
     "classnames": "^2.3.1",
     "color-hash": "^2.0.1",
     "dayjs": "^1.10.7",
@@ -27,12 +23,13 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.5",
-    "remix": "^1.1.1",
+    "remix": "^1.5.1",
     "socket.io-client": "^4.4.1",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.1",
+    "@remix-run/serve": "1.5.1",
+    "@remix-run/dev": "^1.5.1",
     "@types/color-hash": "^1.0.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
