--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,12 @@ services:
         build: .
         ports:
             - '3000:3000'
+        networks:
+            app:
+                ipv4_address: 172.20.128.1
+
+networks:
+    app:
+        ipam:
+            config:
+                - subnet: 172.20.0.0/16
