--- a/package.json
+++ b/package.json
@@ -4,39 +4,49 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "npm run build:css && remix build",
-    "build:css": "tailwindcss -o ./app/styles/tailwind.css",
-    "postinstall": "remix setup node",
-    "dev": "concurrently \"npm run dev:css\" \"npm run dev:remix\"",
-    "dev:css": "tailwindcss -o ./app/styles/tailwind.css --watch",
+    "build": "run-s \"build:*\"",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev": "run-p \"dev:*\"",
+    "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
-    "start": "remix-serve build"
+    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
+    "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
-    "@remix-run/react": "^1.5.1",
+    "@react-query-firebase/firestore": "^1.0.0-dev.7",
+    "@remix-run/netlify": "^1.6.7",
+    "@remix-run/node": "^1.6.7",
+    "@remix-run/react": "^1.6.7",
     "classnames": "^2.3.1",
     "color-hash": "^2.0.1",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
+    "firebase": "^9.9.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.2",
     "react-responsive": "^9.0.0-beta.5",
     "remix": "^1.5.1",
     "socket.io-client": "^4.4.1",
+    "use-sync-external-store": "^1.2.0",
     "zustand": "^3.6.7"
   },
   "devDependencies": {
     "@remix-run/serve": "1.5.1",
     "@remix-run/dev": "^1.5.1",
+    "@remix-run/eslint-config": "^1.6.7",
+    "eslint": "^8.20.0",
     "@types/color-hash": "^1.0.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^6.5.1",
-    "cross-env": "^7.0.3",
-    "tailwindcss": "^3.0.7",
-    "typescript": "^4.1.2"
+    "tailwindcss": "^3.1.7",
+    "typescript": "^4.7.4",
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
     "node": ">=14"
