--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
     "generate:css": "npx tailwindcss -o ./app/tailwind.css",
-    "start": "cross-env NODE_ENV=production netlify dev"
+    "start": "cross-env NODE_ENV=production npm run dev"
   },
   "dependencies": {
-    "@netlify/functions": "^1.0.0",
     "@react-query-firebase/firestore": "^1.0.0-dev.7",
-    "@remix-run/netlify": "^1.6.7",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "classnames": "^2.3.1",
@@ -34,7 +32,9 @@
     "remix": "^1.5.1",
     "socket.io-client": "^4.4.1",
     "use-sync-external-store": "^1.2.0",
-    "zustand": "^3.6.7"
+    "zustand": "^3.6.7",
+    "@remix-run/vercel": "^1.6.7",
+    "@vercel/node": "^2.4.4"
   },
   "devDependencies": {
     "@remix-run/serve": "1.5.1",
