--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "dev": "run-p \"dev:*\"",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix dev",
-    "generate:css": "npx tailwindcss -o ./app/tailwind.css",
+    "generate:css": "npx tailwindcss -o ./app/styles/tailwind.css",
     "start": "cross-env NODE_ENV=production npm run dev"
   },
   "dependencies": {
     "@react-query-firebase/firestore": "^1.0.0-dev.7",
     "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
+    "@remix-run/vercel": "^1.6.7",
+    "@tailwindcss/forms": "^0.5.2",
+    "@vercel/node": "^2.4.4",
     "classnames": "^2.3.1",
     "color-hash": "^2.0.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
     "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.1",
+    "firebaseui": "^6.0.1",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
     "react": "^17.0.2",
@@ -32,9 +37,7 @@
     "remix": "^1.5.1",
     "socket.io-client": "^4.4.1",
     "use-sync-external-store": "^1.2.0",
-    "zustand": "^3.6.7",
-    "@remix-run/vercel": "^1.6.7",
-    "@vercel/node": "^2.4.4"
+    "zustand": "^3.6.7"
   },
   "devDependencies": {
     "@remix-run/serve": "1.5.1",
