--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "baseUrl": ".",
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
   }
 }
